--- a/ansible/playbooks/register-host.yml
+++ b/ansible/playbooks/register-host.yml
@@ -15,11 +15,11 @@
     new_host_group: "{{ new_host_group | default('uncategorized') }}"
     new_host_user: "{{ new_host_user | default('root') }}"
     
-    # Semaphore API details
-    semaphore_url: "{{ lookup('env', 'SEMAPHORE_WEB_ROOT') | default('http://localhost:3000', true) }}"
-    semaphore_project_id: "{{ lookup('env', 'SEMAPHORE_PROJECT_ID') | mandatory }}"
-    semaphore_inventory_id: "{{ lookup('env', 'SEMAPHORE_INVENTORY_ID') | mandatory }}"
-    semaphore_api_token: "{{ lookup('env', 'SEMAPHORE_API_TOKEN') | mandatory }}"
+    # These come from the Variable Group
+    semaphore_url: "{{ lookup('env', 'SEMAPHORE_WEB_ROOT') }}"
+    semaphore_project_id: "{{ lookup('env', 'SEMAPHORE_PROJECT_ID') }}"
+    semaphore_inventory_id: "{{ lookup('env', 'SEMAPHORE_INVENTORY_ID') }}"
+    semaphore_api_token: "{{ lookup('env', 'SEMAPHORE_API_TOKEN') }}"
   
   tasks:
     - name: Display registration information
