--- a/ansible/playbooks/register-host.yml
+++ b/ansible/playbooks/register-host.yml
@@ -1,19 +1,16 @@
 ---
 # ansible/playbooks/register-host.yml
-# Generic host registration - adds host to Semaphore inventory permanently
-# Can be called from first-boot scripts, VM provisioning, etc.
-
 - name: Register New Host in Semaphore Inventory
   hosts: localhost
   connection: local
   gather_facts: false
   
   vars:
-    # These will be passed as extra_vars from the API call
-    new_hostname: "{{ new_hostname | mandatory }}"
-    new_host_ip: "{{ new_host_ip | mandatory }}"
-    new_host_group: "{{ new_host_group | default('uncategorized') }}"
-    new_host_user: "{{ new_host_user | default('root') }}"
+    # Rename these to avoid conflicts - use _input suffix
+    hostname_input: "{{ new_hostname | mandatory }}"
+    host_ip_input: "{{ new_host_ip | mandatory }}"
+    host_group_input: "{{ new_host_group | default('uncategorized') }}"
+    host_user_input: "{{ new_host_user | default('root') }}"
     
     # These come from the Variable Group
     semaphore_url: "{{ lookup('env', 'SEMAPHORE_WEB_ROOT') }}"
@@ -26,10 +23,10 @@
       debug:
         msg: |
           Registering new host:
-          - Hostname: {{ new_hostname }}
-          - IP Address: {{ new_host_ip }}
-          - Group: {{ new_host_group }}
-          - User: {{ new_host_user }}
+          - Hostname: {{ hostname_input }}
+          - IP Address: {{ host_ip_input }}
+          - Group: {{ host_group_input }}
+          - User: {{ host_user_input }}
     
     - name: Fetch current inventory from Semaphore
       uri:
@@ -42,25 +39,51 @@
     
     - name: Parse current inventory YAML
       set_fact:
-        inventory_ "{{ current_inventory.json.inventory | from_yaml }}"
+        inventory_data: "{{ current_inventory.json.inventory | from_yaml }}"
     
-    - name: Add new host to inventory structure
+    - name: Create new host entry
       set_fact:
-        updated_inventory: >-
+        new_host_data:
+          "{{ hostname_input }}":
+            ansible_host: "{{ host_ip_input }}"
+            ansible_user: "{{ host_user_input }}"
+            ansible_python_interpreter: /usr/bin/python3
+            registered_at: "{{ ansible_date_time.iso8601 }}"
+            registered_by: first-boot-automation
+    
+    - name: Ensure group exists in inventory
+      set_fact:
+        inventory_with_group: >-
           {{
             inventory_data | combine({
               'all': {
-                'children': inventory_data.all.children | default({}) | combine({
-                  new_host_group: {
-                    'hosts': (inventory_data.all.children[new_host_group].hosts | default({})) | combine({
-                      new_hostname: {
-                        'ansible_host': new_host_ip,
-                        'ansible_user': new_host_user,
-                        'ansible_python_interpreter': '/usr/bin/python3',
-                        'registered_at': ansible_date_time.iso8601,
-                        'registered_by': 'first-boot-automation'
-                      }
-                    })
+                'children': (inventory_data.all.children | default({})) | combine({
+                  host_group_input: {
+                    'hosts': {},
+                    'vars': {
+                      'ansible_ssh_common_args': '-o StrictHostKeyChecking=no'
+                    }
+                  }
+                })
+              }
+            }, recursive=True)
+          }}
+      when: host_group_input not in (inventory_data.all.children | default({}) | list)
+    
+    - name: Use existing inventory if group already exists
+      set_fact:
+        inventory_with_group: "{{ inventory_data }}"
+      when: host_group_input in (inventory_data.all.children | default({}) | list)
+    
+    - name: Add host to group
+      set_fact:
+        updated_inventory: >-
+          {{
+            inventory_with_group | combine({
+              'all': {
+                'children': inventory_with_group.all.children | combine({
+                  host_group_input: {
+                    'hosts': (inventory_with_group.all.children[host_group_input].hosts | default({})) | combine(new_host_data)
                   }
                 })
               }
@@ -86,7 +109,7 @@
     - name: Confirm registration
       debug:
         msg: |
-          ✓ Host {{ new_hostname }} successfully registered
-          ✓ Added to group: {{ new_host_group }}
+          ✓ Host {{ hostname_input }} successfully registered
+          ✓ Added to group: {{ host_group_input }}
+          ✓ IP Address: {{ host_ip_input }}
           ✓ Inventory updated in Semaphore
-          ✓ Ready for bootstrap
